# cxqubo

./: .gitignore  CMakeLists.txt  README.md  configure.sh
cmake/modules/: AddBuildTarget.cmake  CMakeLists.txt  CompileOptions.cmake
examples/: CMakeLists.txt  ex01.cpp  ex02.cpp  tsp.cpp
include/: CMakeLists.txt
include/cxqubo/: cxqubo.h
include/cxqubo/config/: cxqubo-config.h.cmake
include/cxqubo/core/: compile.h  conditions.h  context.h  entity.h  express.h  exprs.h  poly.h  products.h  reducer.h  sample.h  variables.h  vartypes.h
include/cxqubo/misc/: allocator.h  compare.h  compiler.h  containers.h  ctor.h  debug.h  drawable.h  error_handling.h  hasher.h  list.h  math.h  range.h  shape.h  span.h  spanref.h  stringfrom.h  stringof.h  strsaver.h  type_traits.h  variant.h  vecmap.h
unittests/: CMakeLists.txt
unittests/api/: CMakeLists.txt  cxqubo_test.cpp
unittests/core/: CMakeLists.txt  compile_test.cpp  conditions_test.cpp  context_test.cpp  entity_test.cpp  express_test.cpp  reducer_test.cpp  vartypes_test.cpp
unittests/misc/: CMakeLists.txt  allocator_test.cpp  list_test.cpp  shape_test.cpp
